# double-money-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  Makefile_Misc  README.md
assets/shaders/glsl100/: fs-basic-color.glsl  raymarching-simplified.glsl  vs-basic-color.glsl
assets/shaders/glsl330/: fs-basic-color.glsl  raymarching-simplified.glsl  vs-basic-color.glsl
assets/test/yaml/: GameStuff.yaml  NewObject.yaml  Scene1.yaml  example1-config.yaml
cmake/: CompilerFlags.cmake  CustomTargetsImport.cmake  ImGuiImport.cmake  PlatformFlags.cmake  RLImGuiImport.cmake  RayLibExamples.cmake  RayLibImport.cmake  catch2Import.cmake  clang-cxx-dev-tools.cmake  gladImport.cmake  glfwImport.cmake  glmImport.cmake  yaml-cppInclude.cmake
gdb-commands/: example-main.txt
include/: common.h  terminal-colors.h
ref/: double-money-game.c  terminal-print-test.c
ref/yaml-test/: CMakeLists.txt  main.cpp
ref/yaml-test/YamlTest/: YamlTest.cpp  YamlTest.hpp
src/: CMakeLists.txt  Game.cpp  Game.hpp  GameOptions.hpp  RayWrapper.cpp  RayWrapper.hpp  example-editor.cpp  main.cpp  main.hpp
src/DMG/: Game.cpp  Game.hpp  GameOptions.hpp  RayWrapper.cpp  RayWrapper.hpp
src/DMG/core/: GameState.cpp  GameState.hpp  ICoreBase.hpp  ICoreObject.hpp  IGui.hpp  IGuiManager.hpp  RandomChance.cpp  RandomChance.hpp  RandomTracker.cpp  RandomTracker.hpp
src/DMG/core/events/: event-functions.cpp  event-functions.hpp
src/DMG/core/input/: KeyboardInput.cpp  KeyboardInput.hpp
src/DMG/core/util/: ColorShifting.cpp  ColorShifting.hpp  color-conversion.cpp  color-conversion.hpp
src/DMG/core/yaml/: YamlReader.cpp  YamlReader.hpp
src/DMG/gui/: DebugWindow.cpp  DebugWindow.hpp  GuiObject.cpp  GuiObject.hpp  IWindow.hpp  MainCamera.cpp  MainCamera.hpp  Page.cpp  Page.hpp  PageCreator.cpp  PageCreator.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  StatsWindow.cpp  StatsWindow.hpp  WindowManager.cpp  WindowManager.hpp  scene-creator.cpp  scene-creator.hpp
src/DMG/gui/element/: Button.cpp  Button.hpp  RayButton.cpp  RayButton.hpp  ShaderButton.cpp  ShaderButton.hpp  TextElement.cpp  TextElement.hpp
src/DMG/gui/examples/: ImGuiMyFirstTool.cpp  ImGuiMyFirstTool.hpp
src/DMG/gui/imgui/: DebugWindow.cpp  DebugWindow.hpp  IWindow.hpp  StatsWindow.cpp  StatsWindow.hpp
src/DMG/gui/imgui/element/: Button.cpp  Button.hpp  ShaderButton.cpp  ShaderButton.hpp  TextElement.cpp  TextElement.hpp
src/DMG/gui/imgui/examples/: ImGuiMyFirstTool.cpp  ImGuiMyFirstTool.hpp
src/DMG/gui/imgui/unused/: Page.cpp  Page.hpp  WindowManager.cpp  WindowManager.hpp
src/DMG/raygui/: GuiManager.cpp  GuiManager.hpp  MainCamera.cpp  MainCamera.hpp  RayButton.cpp  RayButton.hpp
src/Events/: event-functions.cpp  event-functions.hpp
src/Input/: ButtonComponent.cpp  ButtonComponent.hpp  KeyboardInput.cpp  KeyboardInput.hpp
src/RandomChance/: RandomChance.cpp  RandomChance.hpp
src/RaylibStarter/: Demo.cpp  Demo.hpp  DocumentWindow.hpp  ImageViewerWindow.cpp  ImageViewerWindow.hpp  RayWrapper.cpp  RayWrapper.hpp  SceneViewWindow.cpp  SceneViewWindow.hpp
src/Window/: DebugWindow.cpp  DebugWindow.hpp  IWindow.hpp
src/core/: GameState.cpp  GameState.hpp  RandomChance.cpp  RandomChance.hpp  RandomTracker.cpp  RandomTracker.hpp
src/core/events/: event-functions.cpp  event-functions.hpp
src/core/input/: KeyboardInput.hpp
src/gui/: DebugWindow.cpp  DebugWindow.hpp  IWindow.hpp  Page.cpp  Page.hpp  PageCreator.cpp  PageCreator.hpp  WindowManager.cpp  WindowManager.hpp  page_ns.cpp  page_ns.hpp
src/gui/element/: Button.cpp  Button.hpp  TextElement.cpp  TextElement.hpp
src/gui/examples/: ImGuiMyFirstTool.cpp  ImGuiMyFirstTool.hpp
test/: CMakeLists.txt  test.cpp
